--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,9 @@
 # English strings go here for Rails i18n
 en:
-  # my_label: "My label"
+  bx:
+    tab: "Bx"
+    label:
+      resources: "Resources"
+      new_resource: "New resource"
+    menu:
+      resources: "Resources"
