--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -13,3 +13,36 @@ ja:
         resource_summary: "概要"
         resource_code: "コード"
 
+    errors:
+      template:
+        header:
+          one:   "%{model} にエラーが発生しました。"
+          other: "%{model} に %{count} つのエラーが発生しました。"
+        body: "次の項目を確認してください。"
+
+      messages:
+        inclusion: "は一覧にありません。"
+        exclusion: "は予約されています。"
+        invalid: "は不正な値です。"
+        confirmation: "が一致しません。"
+        accepted: "を受諾してください。"
+        empty: "を入力してください。"
+        blank: "を入力してください。"
+        too_long: "は%{count}文字以内で入力してください。"
+        too_short: "は%{count}文字以上で入力してください。"
+        wrong_length: "は%{count}文字で入力してください。"
+        taken: "はすでに存在します。"
+        not_a_number: "は数値で入力してください。"
+        not_a_date: "は日付を入力してください。"
+        greater_than: "は%{count}より大きい値にしてください。"
+        greater_than_or_equal_to: "は%{count}以上の値にしてください。"
+        equal_to: "は%{count}にしてください。"
+        less_than: "は%{count}より小さい値にしてください。"
+        less_than_or_equal_to: "は%{count}以下の値にしてください。"
+        odd: "は奇数にしてください。"
+        even: "は偶数にしてください。"
+        greater_than_start_date: "を開始日より後にしてください"
+        not_same_project: "同じプロジェクトに属していません"
+        circular_dependency: "この関係では、循環依存になります"
+        cant_link_an_issue_with_a_descendant: "指定したチケットとは親子関係になっているため関連づけられません"
+
