refs #163 add testcases of BxResourceNode.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
     label:
       resources: "Resources"
       new_resource: "New resource"
+      relational_issues: "Relational issues"
     menu:
       resources: "Resources"
 
