--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,14 @@ en:
         name: "Name"
       history:
         list: "Histories"
+        details: "Details"
+        changed_by: "Changed user"
+        changed_at: "Changed at"
+        operations:
+          create_category: "Category [%{key}] was created."
+          create_branch: "Branch [%{key}] was created."
+          update_branch: "Branch [%{key}] was updated."
+          delete_branch: "Branch [%{key}] was deleted."
     menu:
       resources: "Resources"
 
