--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -49,6 +49,10 @@ ja:
 
   activemodel:
     attributes:
+      bx_resource_form:
+        code: "コード"
+        leaf: "値を登録する"
+        summary: "概要"
       bx_resource_category_form:
         name: "カテゴリ名"
         description: "説明"
@@ -83,4 +87,6 @@ ja:
         less_than_or_equal_to: "は%{count}以下の値にしてください。"
         odd: "は奇数にしてください。"
         even: "は偶数にしてください。"
+        category_not_in_project: "カテゴリ(id: %{id})はこのプロジェクトに存在していません。"
+        parent_not_in_project: "親リソース(id: %{id})はこのプロジェクトに存在していません。"
 
