add tree of children resources to show resources page.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,8 @@ en:
         path: "Path"
         summary: "Summary"
         values: "Values"
+        category: "Category"
+        children: "Children resources"
       category:
         information: "Information"
         new: "New category"
