add route in resource show page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,7 @@ en:
         values: "Values"
         category: "Category"
         children: "Children resources"
+        route: "Route"
       category:
         information: "Information"
         new: "New category"
