--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,6 +25,8 @@ en:
         new: "New branch"
         code: "Code"
         name: "Name"
+      table_group:
+        new: "New table group"
       history:
         list: "Histories"
         operation: "Operation"
@@ -67,6 +69,7 @@ en:
         update: "<strong>%{property}</strong> changed from <em>\"%{old_value}\"</em> to <em>\"%{new_value}\"</em>"
     menu:
       resources: "Resources"
+      table_defs: "Table definitions"
 
   activemodel:
     attributes:
@@ -79,6 +82,11 @@ en:
       bx_resource_branch_form:
         code: "Code"
         name: "Name"
+      bx_table_group_form:
+        name: "Name"
+        database_id: "Database"
+        description: "Description"
+        data_types: "Select data types"
 
     errors:
       template:
