--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,6 +3,7 @@ ja:
     tab: "Bx"
     label:
       bx: "Bx"
+      accept_null: "NULLを許容する"
       resources: "リソース"
       relational_issues: "関連チケット"
       resource:
@@ -34,6 +35,10 @@ ja:
         data_types: "使用するデータ型"
       table_def:
         list: "テーブル定義一覧"
+        new: "新しいテーブル定義"
+      common_column_def:
+        list: "共通列定義一覧"
+        new: "新しい共通列定義"
       history:
         list: "履歴"
         operation: "処理"
@@ -101,6 +106,17 @@ ja:
         database_id: "データベース"
         description: "グループ説明"
         data_types: "使用するデータ型"
+      bx_common_column_def_form:
+        physical_name: "物理名"
+        logical_name: "論理名"
+        data_type_id: "データ型"
+        size: "データ長"
+        scale: "スケール"
+        nullable: "NULL許可"
+        default_value: "初期値"
+        primary_key_number: "主キー番号"
+        type: "種別"
+        note: "備考"
 
     errors:
       template:
