--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,16 @@ en:
       common_column_def:
         list: "Common column definitions"
         new: "New common table definition"
+        physical_name: "Physical name"
+        logical_name: "Logical name"
+        data_type: "Data type"
+        size: "Size"
+        scale: "Scale"
+        nullable: "NULL"
+        default_value: "Default value"
+        primary_key_number: "PK"
+        type: "Type"
+        note: "Note"
       history:
         list: "Histories"
         operation: "Operation"
@@ -69,6 +79,17 @@ en:
             description: "Description"
             database: "Database"
             data_types: "Using data types"
+          create_common_column_def:
+            physical_name: "Physical name"
+            logical_name: "Logical name"
+            data_type: "Data type"
+            size: "Size"
+            scale: "Scale"
+            nullable: "NULL"
+            default_value: "Default value"
+            primary_key_number: "PK"
+            type: "Type"
+            note: "Note"
     text:
       history_operations:
         create_resource: "Resource [%{key}] was created."
