--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -39,6 +39,16 @@ ja:
       common_column_def:
         list: "共通列定義一覧"
         new: "新しい共通列定義"
+        physical_name: "物理名"
+        logical_name: "論理名"
+        data_type: "データ型"
+        size: "データ長"
+        scale: "スケール"
+        nullable: "NULL"
+        default_value: "初期値"
+        primary_key_number: "PK"
+        position_type: "種別"
+        note: "備考"
       history:
         list: "履歴"
         operation: "処理"
@@ -72,6 +82,17 @@ ja:
             description: "説明"
             database: "データベース"
             data_types: "使用データ型"
+          create_common_column_def:
+            physical_name: "物理名"
+            logical_name: "論理名"
+            data_type: "データ型"
+            size: "データ長"
+            scale: "スケール"
+            nullable: "NULL許可"
+            default_value: "初期値"
+            primary_key_number: "PK"
+            position_type: "種別"
+            note: "備考"
     text:
       history_operations:
         create_resource: "リソース [%{key}] を作成"
@@ -115,7 +136,7 @@ ja:
         nullable: "NULL許可"
         default_value: "初期値"
         primary_key_number: "主キー番号"
-        type: "種別"
+        position_type: "種別"
         note: "備考"
 
     errors:
