added display note by dialog

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
       accept_null: "Accept NULL"
       resources: "Resources"
       relational_issues: "Relational issues"
+      display_note: "Display"
       resource:
         add: "Add resource"
         information: "Information"
