--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -105,6 +105,7 @@ ja:
         update_branch: "ブランチ [%{key}] を更新"
         delete_branch: "ブランチ [%{key}] を削除"
         create_table_group: "テーブルグループ [%{key}] を作成"
+        create_common_column_def: "共通列定義 [%{key}] を作成"
       history_detail_notes:
         create: "<strong>%{property}</strong> を <em>\"%{new_value}\"</em> にセット"
         update: "<strong>%{property}</strong> を <em>\"%{old_value}\"</em> から <em>\"%{new_value}\"</em> に変更"
