--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -103,6 +103,7 @@ en:
         delete_branch: "Branch [%{key}] was deleted."
         create_table_group: "Table group [%{key}] was created."
         create_common_column_def: "Common column definition [%{key}] was created."
+        delete_common_column_def: "Common column definition [%{key}] was deleted."
       history_detail_notes:
         create: "<strong>%{property}</strong> set to <em>\"%{new_value}\"</em>"
         update: "<strong>%{property}</strong> changed from <em>\"%{old_value}\"</em> to <em>\"%{new_value}\"</em>"
