--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -106,6 +106,7 @@ ja:
         delete_branch: "ブランチ [%{key}] を削除"
         create_table_group: "テーブルグループ [%{key}] を作成"
         create_common_column_def: "共通列定義 [%{key}] を作成"
+        delete_common_column_def: "共通列定義 [%{key}] を削除"
       history_detail_notes:
         create: "<strong>%{property}</strong> を <em>\"%{new_value}\"</em> にセット"
         update: "<strong>%{property}</strong> を <em>\"%{old_value}\"</em> から <em>\"%{new_value}\"</em> に変更"
