--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -91,6 +91,17 @@ en:
             primary_key_number: "PK"
             type: "Type"
             note: "Note"
+          update_common_column_def:
+            physical_name: "Physical name"
+            logical_name: "Logical name"
+            data_type: "Data type"
+            size: "Size"
+            scale: "Scale"
+            nullable: "NULL"
+            default_value: "Default value"
+            primary_key_number: "PK"
+            type: "Type"
+            note: "Note"
     text:
       history_operations:
         create_resource: "Resource [%{key}] was created."
@@ -103,6 +114,7 @@ en:
         delete_branch: "Branch [%{key}] was deleted."
         create_table_group: "Table group [%{key}] was created."
         create_common_column_def: "Common column definition [%{key}] was created."
+        update_common_column_def: "Common column definition [%{key}] was updated."
         delete_common_column_def: "Common column definition [%{key}] was deleted."
       history_detail_notes:
         create: "<strong>%{property}</strong> set to <em>\"%{new_value}\"</em>"
