--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -94,6 +94,17 @@ ja:
             primary_key_number: "PK"
             position_type: "種別"
             note: "備考"
+          update_common_column_def:
+            physical_name: "物理名"
+            logical_name: "論理名"
+            data_type: "データ型"
+            size: "データ長"
+            scale: "スケール"
+            nullable: "NULL許可"
+            default_value: "初期値"
+            primary_key_number: "PK"
+            position_type: "種別"
+            note: "備考"
     text:
       history_operations:
         create_resource: "リソース [%{key}] を作成"
@@ -106,6 +117,7 @@ ja:
         delete_branch: "ブランチ [%{key}] を削除"
         create_table_group: "テーブルグループ [%{key}] を作成"
         create_common_column_def: "共通列定義 [%{key}] を作成"
+        update_common_column_def: "共通列定義 [%{key}] を更新"
         delete_common_column_def: "共通列定義 [%{key}] を削除"
       history_detail_notes:
         create: "<strong>%{property}</strong> を <em>\"%{new_value}\"</em> にセット"
