--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,10 @@ en:
       table_def:
         list: "Table definitions"
         new: "New table definition"
+        physical_name: "Physical name"
+        logical_name: "Logical name"
+        using_common_column_defs: "Using common columns"
+        description: "Description"
       common_column_def:
         list: "Common column definitions"
         new: "New common table definition"
@@ -139,7 +143,11 @@ en:
         database_id: "Database"
         description: "Description"
         data_types: "Using data types"
-
+      bx_table_def_form:
+        physical_name: "物理名"
+        logical_name: "論理名"
+        using_common_column_defs: "使用する共通列"
+        description: "説明"
     errors:
       template:
         header:
