--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -36,6 +36,7 @@ ja:
         data_types: "使用するデータ型"
       table_def:
         list: "テーブル定義一覧"
+        information: "テーブル情報"
         new: "新しいテーブル定義"
         physical_name: "物理名"
         logical_name: "論理名"
@@ -53,6 +54,19 @@ ja:
         default_value: "初期値"
         primary_key_number: "PK"
         position_type: "種別"
+        note: "備考"
+      column_def:
+        list: "列定義一覧"
+        new: "新しい列定義"
+        physical_name: "物理名"
+        logical_name: "論理名"
+        data_type: "データ型"
+        size: "データ長"
+        scale: "スケール"
+        nullable: "NULL"
+        default_value: "初期値"
+        primary_key_number: "PK"
+        reference_column: "参照列"
         note: "備考"
       history:
         list: "履歴"
@@ -109,6 +123,11 @@ ja:
             primary_key_number: "PK"
             position_type: "種別"
             note: "備考"
+          create_table_def:
+            physical_name: "物理名"
+            logical_name: "論理名"
+            description: "説明"
+            using_common_column_defs: "使用する共通列"
     text:
       history_operations:
         create_resource: "リソース [%{key}] を作成"
@@ -123,6 +142,7 @@ ja:
         create_common_column_def: "共通列定義 [%{key}] を作成"
         update_common_column_def: "共通列定義 [%{key}] を更新"
         delete_common_column_def: "共通列定義 [%{key}] を削除"
+        create_table_def: "テーブル定義 [%{key}] を作成"
       history_detail_notes:
         create: "<strong>%{property}</strong> を <em>\"%{new_value}\"</em> にセット"
         update: "<strong>%{property}</strong> を <em>\"%{old_value}\"</em> から <em>\"%{new_value}\"</em> に変更"
