--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,6 +125,10 @@ en:
             logical_name: "Logical name"
             description: "Description"
             using_common_column_defs: "Using common columns"
+          update_table_def:
+            physical_name: "Physical name"
+            logical_name: "Logical name"
+            description: "Description"
     text:
       history_operations:
         create_resource: "Resource [%{key}] was created."
@@ -140,6 +144,7 @@ en:
         update_common_column_def: "Common column definition [%{key}] was updated."
         delete_common_column_def: "Common column definition [%{key}] was deleted."
         create_table_def: "Table definition [%{key}] was created."
+        update_table_def: "Table definition [%{key}] was updated."
       history_detail_notes:
         create: "<strong>%{property}</strong> set to <em>\"%{new_value}\"</em>"
         update: "<strong>%{property}</strong> changed from <em>\"%{old_value}\"</em> to <em>\"%{new_value}\"</em>"
