--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -128,6 +128,10 @@ ja:
             logical_name: "論理名"
             description: "説明"
             using_common_column_defs: "使用する共通列"
+          update_table_def:
+            physical_name: "物理名"
+            logical_name: "論理名"
+            description: "説明"
     text:
       history_operations:
         create_resource: "リソース [%{key}] を作成"
@@ -143,6 +147,7 @@ ja:
         update_common_column_def: "共通列定義 [%{key}] を更新"
         delete_common_column_def: "共通列定義 [%{key}] を削除"
         create_table_def: "テーブル定義 [%{key}] を作成"
+        update_table_def: "テーブル定義 [%{key}] を更新"
       history_detail_notes:
         create: "<strong>%{property}</strong> を <em>\"%{new_value}\"</em> にセット"
         update: "<strong>%{property}</strong> を <em>\"%{old_value}\"</em> から <em>\"%{new_value}\"</em> に変更"
