--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -66,7 +66,7 @@ ja:
         nullable: "NULL"
         default_value: "初期値"
         primary_key_number: "PK"
-        reference_column: "参照列"
+        reference_column_def: "参照列"
         note: "備考"
       history:
         list: "履歴"
@@ -132,6 +132,17 @@ ja:
             physical_name: "物理名"
             logical_name: "論理名"
             description: "説明"
+          create_column_def:
+            physical_name: "物理名"
+            logical_name: "論理名"
+            data_type: "データ型"
+            size: "データ長"
+            scale: "スケール"
+            nullable: "NULL許可"
+            default_value: "初期値"
+            reference_column_def: "参照列"
+            primary_key_number: "PK"
+            note: "備考"
     text:
       history_operations:
         create_resource: "リソース [%{key}] を作成"
@@ -148,6 +159,7 @@ ja:
         delete_common_column_def: "共通列定義 [%{key}] を削除"
         create_table_def: "テーブル定義 [%{key}] を作成"
         update_table_def: "テーブル定義 [%{key}] を更新"
+        create_column_def: "列定義 [%{key}] を作成"
       history_detail_notes:
         create: "<strong>%{property}</strong> を <em>\"%{new_value}\"</em> にセット"
         update: "<strong>%{property}</strong> を <em>\"%{old_value}\"</em> から <em>\"%{new_value}\"</em> に変更"
