add table group link to table definition show page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,6 +36,7 @@ en:
         list: "Table definitions"
         new: "New table definition"
         information: "Information"
+        table_group: "Belonging table group"
         physical_name: "Physical name"
         logical_name: "Logical name"
         using_common_column_defs: "Using common columns"
