--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -38,6 +38,7 @@ ja:
         list: "テーブル定義一覧"
         information: "テーブル情報"
         new: "新しいテーブル定義"
+        table_group: "所属グループ"
         physical_name: "物理名"
         logical_name: "論理名"
         using_common_column_defs: "使用する共通列"
