--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -109,7 +109,7 @@ en:
             nullable: "NULL"
             default_value: "Default value"
             primary_key_number: "PK"
-            type: "Type"
+            position_type: "Positon type"
             note: "Note"
           update_common_column_def:
             physical_name: "Physical name"
@@ -120,7 +120,7 @@ en:
             nullable: "NULL"
             default_value: "Default value"
             primary_key_number: "PK"
-            type: "Type"
+            position_type: "Positon type"
             note: "Note"
           create_table_def:
             physical_name: "Physical name"
@@ -131,6 +131,28 @@ en:
             physical_name: "Physical name"
             logical_name: "Logical name"
             description: "Description"
+          create_column_def:
+            physical_name: "Physical name"
+            logical_name: "Logical name"
+            data_type: "Data type"
+            size: "Size"
+            scale: "Scale"
+            nullable: "NULL"
+            default_value: "Default value"
+            reference_column_def: "Reference column"
+            primary_key_number: "PK"
+            note: "Note"
+          update_column_def:
+            physical_name: "Physical name"
+            logical_name: "Logical name"
+            data_type: "Data type"
+            size: "Size"
+            scale: "Scale"
+            nullable: "NULL"
+            default_value: "Default value"
+            reference_column_def: "Reference column"
+            primary_key_number: "PK"
+            note: "Note"
     text:
       history_operations:
         create_resource: "Resource [%{key}] was created."
@@ -147,6 +169,8 @@ en:
         delete_common_column_def: "Common column definition [%{key}] was deleted."
         create_table_def: "Table definition [%{key}] was created."
         update_table_def: "Table definition [%{key}] was updated."
+        create_column_def: "Column definition [%{key}] was created."
+        update_column_def: "Column definition [%{key}] was updated."
       history_detail_notes:
         create: "<strong>%{property}</strong> set to <em>\"%{new_value}\"</em>"
         update: "<strong>%{property}</strong> changed from <em>\"%{old_value}\"</em> to <em>\"%{new_value}\"</em>"
