--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -174,6 +174,7 @@ ja:
         update_table_def: "テーブル定義 [%{key}] を更新"
         create_column_def: "列定義 [%{key}] を作成"
         update_column_def: "列定義 [%{key}] を更新"
+        delete_column_def: "列定義 [%{key}] を削除"
       history_detail_notes:
         create: "<strong>%{property}</strong> を <em>\"%{new_value}\"</em> にセット"
         update: "<strong>%{property}</strong> を <em>\"%{old_value}\"</em> から <em>\"%{new_value}\"</em> に変更"
