--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -103,6 +103,11 @@ ja:
             description: "説明"
             database: "データベース"
             data_types: "使用データ型"
+          update_table_group:
+            name: "グループ名"
+            description: "説明"
+            database: "データベース"
+            data_types: "使用データ型"
           create_common_column_def:
             physical_name: "物理名"
             logical_name: "論理名"
@@ -167,6 +172,7 @@ ja:
         update_branch: "ブランチ [%{key}] を更新"
         delete_branch: "ブランチ [%{key}] を削除"
         create_table_group: "テーブルグループ [%{key}] を作成"
+        update_table_group: "テーブルグループ [%{key}] を更新"
         create_common_column_def: "共通列定義 [%{key}] を作成"
         update_common_column_def: "共通列定義 [%{key}] を更新"
         delete_common_column_def: "共通列定義 [%{key}] を削除"
