--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -76,36 +76,22 @@ en:
         details: "Details"
       history_detail:
         properties:
-          create_resource:
+          resource:
             code: "Code"
             summary: "Summary"
             value: "Value"
-          update_resource:
-            code: "Code"
-            summary: "Summary"
-          create_category:
+          category:
             name: "Category mame"
             description: "Description"
-          update_category:
-            name: "Category name"
-            description: "Description"
-          create_branch:
+          branch:
             name: "Branch name"
             code: "Code"
-          update_branch:
-            name: "Branch name"
-            code: "Code"
-          create_table_group:
+          table_group:
             name: "Group name"
             description: "Description"
             database: "Database"
             data_types: "Using data types"
-          update_table_group:
-            name: "Group name"
-            description: "Description"
-            database: "Database"
-            data_types: "Using data types"
-          create_common_column_def:
+          common_column_def:
             physical_name: "Physical name"
             logical_name: "Logical name"
             data_type: "Data type"
@@ -116,38 +102,12 @@ en:
             primary_key_number: "PK"
             position_type: "Positon type"
             note: "Note"
-          update_common_column_def:
-            physical_name: "Physical name"
-            logical_name: "Logical name"
-            data_type: "Data type"
-            size: "Size"
-            scale: "Scale"
-            nullable: "NULL"
-            default_value: "Default value"
-            primary_key_number: "PK"
-            position_type: "Positon type"
-            note: "Note"
-          create_table_def:
+          table_def:
             physical_name: "Physical name"
             logical_name: "Logical name"
             description: "Description"
             using_common_column_defs: "Using common columns"
-          update_table_def:
-            physical_name: "Physical name"
-            logical_name: "Logical name"
-            description: "Description"
-          create_column_def:
-            physical_name: "Physical name"
-            logical_name: "Logical name"
-            data_type: "Data type"
-            size: "Size"
-            scale: "Scale"
-            nullable: "NULL"
-            default_value: "Default value"
-            reference_column_def: "Reference column"
-            primary_key_number: "PK"
-            note: "Note"
-          update_column_def:
+          column_def:
             physical_name: "Physical name"
             logical_name: "Logical name"
             data_type: "Data type"
