--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -68,6 +68,14 @@ en:
         common_column_def: "Common column"
         primary_key_number: "PK"
         note: "Note"
+      index_def:
+        list: "Index definitions"
+        new: "New index definition"
+        physical_name: "Physical name"
+        logical_name: "Logical name"
+        unique: "Unique"
+        position: "Position"
+        note: "Note"
       history:
         list: "Histories"
         operation: "Operation"
@@ -162,10 +170,28 @@ en:
         description: "Description"
         data_types: "Using data types"
       bx_table_def_form:
-        physical_name: "物理名"
-        logical_name: "論理名"
-        using_common_column_defs: "使用する共通列"
-        description: "説明"
+        physical_name: "Physical name"
+        logical_name: "Logical name"
+        using_common_column_defs: "Using common columns"
+        description: "Description"
+      bx_column_def_form:
+        physical_name: "Physical name"
+        logical_name: "Logical name"
+        data_type_id: "Data type"
+        size: "Size"
+        scale: "Scale"
+        nullable: "NULL"
+        default_value: "Default value"
+        reference_column_def_id: "Reference column"
+        primary_key_number: "PK"
+        note: "Note"
+      bx_index_def_form:
+        physical_name: "Physical name"
+        logical_name: "Logical name"
+        unique: "Unique"
+        define_as_unique: "Define as unique index"
+        column_defs: "Select columns"
+        note: "Note"
     errors:
       template:
         header:
